--- a/styles/globals.css
+++ b/styles/globals.css
@@ -389,7 +389,8 @@ logo-header img {
 
 
 .generate_button {
- margin-left: 35%;
+ margin-left: auto;
+ margin-right: auto;
  padding-top: 2%;
  padding-bottom: 5%;
  font-size: 36px;
@@ -1652,17 +1653,20 @@ select {
 }
 
 .generate_button {
-
+  margin-left: auto;
+  margin-right: auto;
   background: hotpink;
   color: black;
   font-size: 20px;
   width: 38%;
   height: 12%;
   border-radius: 20px;
-  margin-left: 5%;
+  /* margin-left: 5%; */
   cursor: pointer;
   padding-bottom:10px;
   padding-top:10px;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .gereate_button:active {
